[project]
name = "signals-py"
version = "0.1.0"
description = "send and receive signals"
readme = "README.md"
requires-python = ">=3.12"
maintainers = [
    {name = "amirreza",email = "amir.rsf1380@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta" ,
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "lazy-settings>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/khiyavan/signals-py"
Issues = "https://github.com/khiyavan/signals-py/issues"

[tool.mypy]
exclude = ["tests/"]

